# writeadoc

./: Makefile  README.md  TODO.md  arguments.md  components.md  css_and_js.md  demo.py  docs.py  index.md  organization.md  pyproject.toml  slots.md
.github/workflows/: test.yml
docs/: docs.py
docs/content/: api.md  autodoc.md  index.md  languages.md  markdown.md  pages.md  versions.md
docs/views/: __init__.py  autodoc.md.jx  banner_archived.jinja  color_scheme.py  footer.jinja  footer.jx  header.jinja  header.jx  index.jinja  index.jx  index.py  language_popover.jinja  language_popover.py  language_selector.jinja  layout.jinja  layout.jx  layout.py  metadata.jinja  metadata.jx  page.jinja  page.jx  page.py  page_nav.jinja  page_toc.jinja  robots.txt.jinja  search.jinja  search.jx  search.py  sidebar.jinja  sidebar.jx  sitemap.xml.jinja  sitemap.xml.jx  strings.json  strings.py  toc.jinja  toc.jx  toc.py  version_popover.jinja  version_popover.py  version_selector.jx
ftoc/: admonition.py  attrs.py  demo.md  demo.py  highlight.py  test_highlight.py
md/: admonition.py  demo.md  demo.py  html_renderer.py  utils.py
overview/: intro.md  motivation.md
src/writeadoc/: __init__.py  autodoc.py  cli.py  exceptions.py  helpers.py  main.py  mdjx.py  (+5 more)
starter/: docs.py
tests/: conftest.py  test_autodoc.py  test_autodoc_extension.py  test_cli_build.py  test_extractor.py  test_mdjx.py  test_validate_links.py
theme/: __init__.py  color_scheme.jinja  color_scheme.py  index.jinja  index.py  layout.jinja  layout.py  page.jinja  search.jinja  search.py  toc.jinja  toc.py
(+107 files in other folders)
